src/test/resources/invalid_tests/InvalidArrayAccessValue.cnna
architecture InvalidArrayAccessValue{
    def input Z(0:255)^{h=200,w=300,c=3} image[3]
    def output Q(0:1)^{classes=3} predictions

    def conv(filter, channels){
        Convolution(kernel=filter, channels=channels) ->
        Relu()
    }

    def inputGroup(index){
        [index] ->
        conv(filter=(3,3), channels=32, ->=3) ->
        MaxPooling(kernel=(2,2), stride=(2,2))
    }

    (image[0] | image[1] | image[2] | image[3]) ->
    inputGroup(index=0|..|2) ->
    Concatenate() ->
    conv(filter=(3,3), channels=64) ->
    MaxPooling(kernel=(2,2), stride=(2,2)) ->

    FullyConnected(units=32) ->
    Relu() ->
    FullyConnected(units=classes) ->
    Softmax() ->
    predictions
}
